# v8_valueserializer

./: .gitignore  .insta.yaml  Cargo.toml  README.md  deno.json  test.js
.github/workflows/: ci.yml
fuzz/: Cargo.toml  deserializer.rs  deserializer_repro.rs  display.rs  display_repro.rs  run.ts  util.rs
lib/: mod.ts
src/: de.rs  display.rs  lib.rs  ser.rs  tags.rs  value.rs
tests/: deserializer.rs  display.rs  serde.rs  util.rs  v8_test.rs
tests/snapshots/: deserializer__arraybuffer_empty.snap  deserializer__arraybuffer_one_byte.snap  deserializer__arraybuffer_with_data.snap  deserializer__bigint.snap  deserializer__bigint64array_empty.snap  deserializer__bigint64array_one_byte.snap  deserializer__bigint64array_resizable.snap  deserializer__bigint64array_resizable_non_tracking.snap  deserializer__bigint64array_subarray.snap  deserializer__bigint64array_two_bytes.snap  deserializer__bigint_neg.snap  deserializer__bigint_primitive.snap  deserializer__bigint_primitive_neg.snap  deserializer__bigint_primitive_u128_max.snap  deserializer__bigint_primitive_u64_max.snap  deserializer__bigint_primitive_zero.snap  deserializer__bigint_u128_max.snap  deserializer__bigint_u64_max.snap  deserializer__bigint_zero.snap  deserializer__biguint64array_empty.snap  deserializer__biguint64array_one_byte.snap  deserializer__biguint64array_resizable.snap  deserializer__biguint64array_resizable_non_tracking.snap  deserializer__biguint64array_subarray.snap  deserializer__biguint64array_two_bytes.snap  deserializer__bool_false.snap  deserializer__bool_true.snap  deserializer__boolean_false.snap  deserializer__boolean_primitive_false.snap  deserializer__boolean_primitive_true.snap  deserializer__boolean_true.snap  deserializer__circular_reference.snap  deserializer__circular_reference_multi.snap  deserializer__date.snap  deserializer__date_invalid.snap  deserializer__date_max.snap  deserializer__date_min.snap  deserializer__date_zero.snap  deserializer__dense_array_empty.snap  deserializer__dense_array_one_element.snap  (+612 more)
wasm/: Cargo.toml  lib.rs
