[package]
name = "v8_valueserializer"
version = "0.1.0"
edition = "2021"

[[example]]
name = "fuzz_deserializer"
path = "fuzz/deserializer.rs"

[[example]]
name = "fuzz_deserializer_repro"
path = "fuzz/deserializer_repro.rs"

[[example]]
name = "fuzz_display"
path = "fuzz/display.rs"

[[example]]
name = "fuzz_display_repro"
path = "fuzz/display_repro.rs"


[dependencies]
bitflags = "2.4.1"
encoding_rs = "0.8"
indexmap = "2.0.2"
insta = "1.34.0"
num-bigint = "0.4.4"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.49"
wtf8 = "0.1.0"

[dev-dependencies]
v8 = "0.79.2"
afl = "0.14"

[workspace]
members = [".", "wasm"]
