[package]
name = "v8_valueserializer"
version = "0.1.1"
description = "A Rust implementation of V8's ValueSerializer and ValueDeserializer"
authors = ["the Deno authors"]
repository = "https://github.com/denoland/v8_valueserializer"
license = "MIT"
edition = "2021"

[dependencies]
bitflags = "2.4.1"
encoding_rs = "0.8"
indexmap = "2.0.2"
num-bigint = "0.4.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.49"
wtf8 = "0.1.0"

[dev-dependencies]
insta = "1.34.0"
v8 = "0.79.2"

[workspace]
members = [".", "wasm"]
